<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_ProduceDataRecord_RD" Id="{0f762559-3e17-4f84-8809-35db05926fa8}">
    <Declaration><![CDATA[TYPE UDT_ProduceDataRecord_RD :
STRUCT
goodValue : DINT; // 良品数量
badValue : DInt; // 不良品数量
totalValue : DInt; // 总产品数量
cumulativeValue : DInt; // 累计生产数量
yieldRatio : Real; // 良品率
badRatio : Real; // 不良率
 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>